fix: 보안 설정 변경